<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARToolKit Camera Calibration</string>
    <string name="calibration">New calibration</string>
    <string name="undistorted">Undistorted</string>
    <string name="comparison">Comparison</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating…</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>

    <string name="help">Help</string>

    <string-array name="menuItems">
        <item>@string/comparison</item>
        <item>@string/undistorted</item>
        <item>@string/calibration</item>
        <item>@string/share_calibration</item>
        <!--<item>@string/prefCategory_title_printing</item>-->
        <item>@string/menuItem_settings</item>
        <item>@string/help</item>
        <item>@string/calib_stats</item>
    </string-array>


    <string name="menuItem_settings">Settings</string>
    <string name="prefCategory_title_camera">Camera settings</string>
    <string name="pref_title_cameraResolution">Camera resolution</string>
    <string-array name="pref_entries_cameraResolution">
        <item>320x240   (4:3)</item>
    </string-array>
    <string-array name="pref_entryValues_cameraResolution">
        <item>320x240</item>
    </string-array>
    <string name="pref_defaultValue_cameraResolution">320x240</string>
    <string name="pref_title_cameraIndex">Change camera</string>
    <string-array name="pref_entries_cameraIndex">
        <item>Rear camera</item>
    </string-array>
    <string-array name="pref_entryValues_cameraIndex">
        <item>0</item>
    </string-array>


    <string name="prefCategory_title_printing">Print settings</string>
    <string name="pref_title_paperSize">Paper size</string>
    <string-array name="pref_entries_paperSize">
        <item>A4</item>
        <item>US Letter</item>
    </string-array>
    <string-array name="pref_entryValues_paperSize">
        <item>A4</item>
        <item>US Letter</item>
    </string-array>

    <string name="guidingText_Start">Tap on screen to start</string>
    <string name="share_calibration">Share calibration</string>
    <string name="title_activity_share">Share</string>
    <string name="share_text">Share using</string>
    <string name="deleteCalibrationFiles">Delete all calibration files</string>
    <string name="startCalibrationDesc">Start the camera calibration</string>
    <string name="menuDesc">Open the menu</string>
    <string name="guidingText_Preloaded">Calibration from previous run already loaded. Tap on screen to start new calibration.</string>
    <string name="pref_defaultValue_cameraIndex">0</string>
    <string name="guide_mode_on">Enable guide mode</string>
    <string name="guide_mode_off">Disable guide mode</string>
    <string name="guidemode_intro_text">Scan the calibration pattern and move the corner to the yellow dot.</string>
    <string name="error_no_calibration">No calibration files to share. Run a calibration first.</string>
    <string name="text_calibrationFinished">Calibration finished. Now in preview mode.</string>
    <string name="text_frameRejected">Frame rejected as the angle from camera to pattern is to steep. Angle > 40˚</string>
    <string name="prefCategory_title_calibrationServer">Calibration Server URL</string>
    <string name="pref_calibrationServerDefault">https://omega.artoolworks.com/app/calib_camera/upload.php</string>
    <string name="calib_stats">Calibration statistics</string>
    <string name="string_averageReproErr">- Average reprojection error</string>
    <string name="removeFrame">Remove frame from calibration</string>
    <string name="error_no_selection">Please select a value to remove</string>
    <string name="error_values_removed">Values removed. Recalibration starts when navigating back to main screen.</string>
    <string name="deleteCalibrationFrame">Delete this frame from calibration</string>
    <string name="camera_lense_content_description">camera lense taking a picture</string>

    <plurals name="numberOfPicturesTaken">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d picture taken</item>
        <item quantity="other">%d pictures taken</item>
    </plurals>
</resources>
