<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.opencv.android.JavaCameraView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/camera_calibration_java_surface_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_guiding"
            android:text="@string/guidingText_Start"
            style="@style/SemiTransparent"
            android:layout_margin="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:layout_gravity="center_horizontal|bottom" />

        <!--Start calibration button-->
        <ImageButton
            android:contentDescription="@string/startCalibrationDesc"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_transform_white_48px"
            android:background="@drawable/hexagon"
            android:id="@+id/button_startCalibration"
            android:layout_gravity="center_horizontal|top"
            android:visibility="invisible"
            android:layout_marginTop="5dp"
            />

        <!--Menu button-->
        <ImageButton
            android:contentDescription="@string/menuDesc"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_menu_white_48px"
            android:id="@+id/button_menu"
            android:layout_gravity="start|top"
            android:background="@android:color/transparent" />

        <!-- Dummy text to enable the gray menu layer to reach the far end of the screen-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="#000000ff"
            android:background="#000000ff"
            android:layout_gravity="end|bottom"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:contentDescription="@string/guide_mode_on"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_assistant_white_24px"
            android:background="@drawable/hexagon"
            android:id="@+id/button_guideMode"
            android:layout_gravity="end|top"
            android:visibility="visible"
            android:layout_margin="10dp"
            />

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="15dp"
            android:id="@+id/progressBar"
            android:visibility="invisible"
            android:progress="0"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:background="@color/artk_light_transparent"/>
        <ImageView
            android:id="@+id/image_takePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera_white_24px"
            android:visibility="invisible"
            android:contentDescription="@string/camera_lense_content_description" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:background="@color/artk_light_transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadStatusBar"
            android:layout_gravity="end|bottom"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_error_white_24px"
            android:id="@+id/button_uploadError"
            android:layout_gravity="end|bottom"
            android:visibility="invisible"
            />
    </FrameLayout>

    <!--Screen comparison layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_compare"
        android:orientation="horizontal"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            style="@style/SemiTransparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undistorted"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            style="@style/SemiTransparent"/>
    </LinearLayout>

    <ListView android:id="@+id/menuList"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        style="@style/solidBackground"/>



</android.support.v4.widget.DrawerLayout>